--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,11 +1,13 @@
 files:
-  "/etc/httpd/conf.d/wsgi_custom.conf":
-    mode: "000644"
+  "/opt/elasticbeanstalk/hooks/appdeploy/post/99_start_application.sh":
+    mode: "000755"
     owner: root
     group: root
     content: |
-      WSGIApplicationGroup %{GLOBAL}
+      #!/usr/bin/env bash
+      # Start application.py
+      python /var/app/current/application.py &
 
-commands:
-  01_install_libgl:
-    command: "yum install -y libglvnd-glx"
+container_commands:
+  01_restart_nginx:
+    command: "service nginx restart"
